--- a/html/assets/css/bootstrap.css
+++ b/html/assets/css/bootstrap.css
@@ -10158,7 +10158,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #6c757d !important;
+  color: #6c757d;
 }
 
 .text-black-50 {
